fix(storage): start with an empty saved places list